fix(phone): recording buttons overlapping header (#3100)

--- a/src/pages/tickets/detail/components/PhoneEvent/DownloadableDeletableRecording.less
+++ b/src/pages/tickets/detail/components/PhoneEvent/DownloadableDeletableRecording.less
@@ -9,6 +9,7 @@
 
     .button {
         padding: @layout-spacing-xs;
+        z-index: 0;
     }
 }
 
